# SLSVD

./: .coverage  CHANGELOG.md  CONTRIBUTING.md  GCC.R  README.md  pyproject.toml  simulation.R
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/slsvd/: index.doctree
docs/_build/doctrees/autoapi/slsvd/data_generation/: index.doctree
docs/_build/doctrees/autoapi/slsvd/metrics/: index.doctree
docs/_build/doctrees/autoapi/slsvd/slsvd/: index.doctree
docs/_build/html/: .buildinfo  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/slsvd/: data_generation.html  metrics.html  slsvd.html
docs/_build/html/_sources/: example.ipynb.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/_sources/autoapi/slsvd/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/slsvd/: index.html
docs/_build/html/autoapi/slsvd/data_generation/: index.html
docs/_build/html/autoapi/slsvd/metrics/: index.html
docs/_build/html/autoapi/slsvd/slsvd/: index.html
docs/_build/jupyter_execute/: example.ipynb
src/slsvd/: __init__.py  data_generation.py  slsvd.py  sparse_logistic_pca.py
tests/: test_slsvd.py
(+3 files in other folders)
